Move the 'btn-ignore-dropdown' css to the scss file to ensure that it works with dark and high contrast themes.
refs #7282

--- a/web/pgadmin/tools/schema_diff/static/css/schema_diff.css
+++ b/web/pgadmin/tools/schema_diff/static/css/schema_diff.css
@@ -153,9 +153,3 @@
 .slick-cell .ml-3 {
   margin-left: 3rem !important;
 }
-
-#btn-ignore-dropdown {
-  color: #fff !important;
-  background-color: #326690 !important;
-  border-color: #326690 !important;
-}
