--- a/web/pgadmin/tools/schema_diff/static/scss/_schema_diff.scss
+++ b/web/pgadmin/tools/schema_diff/static/scss/_schema_diff.scss
@@ -137,3 +137,9 @@
 .select2-selection__placeholder {
   color: $select2-placeholder !important;
 }
+
+#btn-ignore-dropdown {
+  color: $btn-primary-color !important;
+  background-color: $color-primary !important;
+  border-color: $color-primary !important;
+}
